2012-01-05  Eric Schulte  <eric.schulte@gmx.com>

	* ob.el (org-babel-expand-noweb-references): Resurrect dropped
	pieces of a previous patch.

	* ob-maxima.el (org-babel-execute:maxima): Fix compiler warning.

2012-01-05  Bastien Guerry  <bzg@gnu.org>

	* org-eshell.el (org-eshell-open): Use (goto-char (point-max))
	instead of (end-of-buffer).

	* org-bbdb.el (name): Declare variable.
	(bbdb-record-get-field, bbdb-search-name)
	(bbdb-search-organization): Declare as part of ext:bbdb.

	* org-agenda.el: Add an alias for `org-agenda-filter'.
	(diary-list-entries-hook): Use the non-obsolete hook.
	(org-agenda-filter-apply): Silent compiler warnings.

	* org-mobile.el (org-mobile-push): Use `org-agenda-tag-filter'
	instead of the obsolete `org-agenda-filter'.

2012-01-03  Bastien Guerry  <bzg@gnu.org>

	* org.el (org-ctrl-c-ctrl-c): Preserve symmetry when adding
	and removing checkboxes with `C-u C-c C-c' on the first item
	of a list.  Also, don't reinitialize checkboxes that are
	already ticked.

2012-01-03  Bastien Guerry  <bzg@gnu.org>

	* org.el (org-ts-regexp0, org-ts-regexp1): Also match a time
	value with only one digit for the hours.

2012-01-03  Bastien Guerry  <bzg@gnu.org>

	* org-agenda.el (org-batch-agenda, org-batch-agenda-csv):
	Remove deleted function `org-encode-for-stdout'.

2012-01-03  Bastien Guerry  <bzg@gnu.org>

	* org.el (org-show-context): Complete docstring.

2012-01-03  Bastien Guerry  <bzg@gnu.org>

	* org-agenda.el (org-agenda-filter-by-tag): Use
	`read-char-exclusive' instead of `read-char'.

2012-01-03  Carsten Dominik  <carsten.dominik@gmail.com>  (tiny change)

	* org-clock.el (org-clock-in, org-clock-find-position): Remove
	erraneous space in regexp.

2012-01-03  Eric Schulte  <eric.schulte@gmx.com>

	* ob.el (org-babel-expand-noweb-references): Rather than using
	a pure regexp solution to resolve noweb references, actually
	check the information of every code block in the buffer.  This